<resources>
    <string name="app_name">AI Drug Interaction Checker</string>
    <string name="profile">Profile</string>
    <string name="interaction_checker">Interaction Checker</string>
    <string name="help">Help</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ai_drug_interaction_checker">AI Drug Interaction Checker</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="have_an_account_click_here_to_login">Have an Account? Click here to Login!</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_click_here_to_register">Don\'t have an Account? Click here to Register!</string>
    <string name="retype_password">Retype Password</string>
    <string name="logout">Logout</string>
    <string name="save">Save</string>
    <string name="age">Age:</string>
    <string name="enter_age_here">Enter Age Here</string>
    <string name="biological_sex">Biological Sex:</string>
    <string name="prescribed_medication">Prescribed Medication:</string>
    <string name="enter_drug_name_here">Enter Drug Name Here</string>
    <string name="add">Add</string>
    <string name="pre_existing_conditions">Pre-Existing Conditions:</string>
    <string name="enter_condition_name_here">Enter Condition Name Here</string>

    <string name="selected_item">Selected item:</string>
    <string name="delete">delete</string>
    <string name="sample_text">sample text</string>
    <string name="help2">Help</string>
    <string name="interaction_checker2">Interaction Checker</string>
    <string name="enter_comparison_drug_here">Enter Comparison Drug Here</string>
    <string name="comparison_drug">Comparison Drug:</string>
    <string name="barcode_scanner">barcode scanner</string>
    <string name="compare">Compare</string>
    <string name="comparison_results">Comparison Results:</string>
    <string name="comparison_results_recycler">Comparison Results Recycler</string>
    <string name="comparison_results2">Comparison Results</string>
    <string name="health_factor">Health Factor:</string>
    <string name="risk_level">Risk Level:</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="password_recovery">Password Recovery</string>
    <string name="send_recovery_email">Send Recovery Email</string>
    <string name="back">Back</string>
    <string name="account_successfully_created_a_verification_link_has_been_sent_to_your_email">Account successfully created! A verification link has been sent to your email!</string>
    <string name="interaction_results">Interaction Results:</string>
    <string name="submit">Submit</string>
    <string name="how_to_use_the_app">How to Use the App:</string>
    <string name="to_use_the_app_fill_out_all_information_on_the_profile_page_and_click_save_next_navigate_to_the_interaction_checker_page_where_you_should_see_your_health_factors_already_populated_enter_in_the_comparison_drug_you_would_like_to_check_the_interaction_severity_against_either_by_using_the_text_entry_or_through_scanning_it_s_barcode_by_clicking_the_barcode_scanner_button_to_the_right_of_the_text_entry">To use the app fill out all information on the profile page and click save. Next navigate to the Interaction Checker page where you should see your health factors already populated. Enter in the comparison drug you would like to check the interaction severity against either by using the text entry or through scanning it\'s barcode by clicking the barcode scanner button to the right of the text entry.</string>
    <string name="questions_and_answers">Questions and Answers:</string>
    <string name="question">Question:</string>
    <string name="is_my_medical_information_stored_securely">Is my medical information stored securely?</string>
    <string name="answer">Answer:</string>
    <string name="your_medical_information_is_encrypted_within_our_database_and_cannot_be_accessed_by_any_account_other_than_your_to_ensure_your_medical_information_remains_private">Your medical information is encrypted within our database and cannot be accessed by any account other than your to ensure your medical information remains private.</string>
    <string name="how_does_your_app_perform_drug_interaction_risk_analysis">How does your app perform drug interaction risk analysis?</string>
    <string name="our_app_uses_a_machine_learning_model_trained_on_drug_interaction_data_in_order_to_predict_the_risk_level_of_a_drug_interaction_to_a_high_degree_of_certainty">Our app uses a machine learning model trained on drug interaction data in order to predict the risk level of a drug interaction to a high degree of certainty.</string>
    <string name="how_accurate_is_your_risk_analysis">How accurate is your risk analysis?</string>
    <string name="our_machine_learning_model_has_an_accuracy_greater_than_75_of_course_always_make_sure_to_consult_a_doctor_before_taking_a_new_potentially_harmful_medication">Our machine learning model has an accuracy greater than 75%. Of course always make sure to consult a doctor before taking a new potentially harmful medication.</string>
    <string name="for_any_other_questions_or_issues_reach_out_to_us_at">For any other questions or issues reach out to us at:</string>
    <string name="aidruginteractionchecker_gmail_com">aidruginteractionchecker@gmail.com</string>
    <string name="biological_sex1">Biological Sex</string>
    <string name="interaction_results1">Interaction Results</string>
    <string name="common_side_effects">Common side effects</string>
    <string name="common_side_effects_and_their_frequency">Common Side Effects and Their Frequency</string>
    <string-array name="choose_sex">
        <item>Male</item>
        <item>Female</item>
    </string-array>

</resources>