<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HelpFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/archivo_black"
            android:text="@string/help2"
            android:textSize="34sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="36dp"
            android:contentDescription="@string/help"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView15"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/how_to_use_the_app"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="10dp" />

                <TextView
                    android:id="@+id/textView16"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/to_use_the_app_fill_out_all_information_on_the_profile_page_and_click_save_next_navigate_to_the_interaction_checker_page_where_you_should_see_your_health_factors_already_populated_enter_in_the_comparison_drug_you_would_like_to_check_the_interaction_severity_against_either_by_using_the_text_entry_or_through_scanning_it_s_barcode_by_clicking_the_barcode_scanner_button_to_the_right_of_the_text_entry"
                    android:textAlignment="center"
                    android:textSize="16sp" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="25dp" />

                <TextView
                    android:id="@+id/textView17"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/questions_and_answers"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="10dp" />

                <TextView
                    android:id="@+id/textView18"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/question"
                    android:textAlignment="textStart"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView19"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/is_my_medical_information_stored_securely"
                    android:textSize="16sp" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="5dp" />

                <TextView
                    android:id="@+id/textView20"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/answer"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView21"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/your_medical_information_is_encrypted_within_our_database_and_cannot_be_accessed_by_any_account_other_than_your_to_ensure_your_medical_information_remains_private"
                    android:textSize="16sp" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="10dp" />

                <TextView
                    android:id="@+id/textView22"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/question"
                    android:textAlignment="textStart"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView23"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/how_does_your_app_perform_drug_interaction_risk_analysis"
                    android:textSize="16sp" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="5dp" />

                <TextView
                    android:id="@+id/textView24"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/answer"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView25"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/our_app_uses_a_machine_learning_model_trained_on_drug_interaction_data_in_order_to_predict_the_risk_level_of_a_drug_interaction_to_a_high_degree_of_certainty"
                    android:textSize="16sp" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="10dp" />

                <TextView
                    android:id="@+id/textView26"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/question"
                    android:textAlignment="textStart"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView27"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/how_accurate_is_your_risk_analysis"
                    android:textSize="16sp" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="5dp" />

                <TextView
                    android:id="@+id/textView28"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/answer"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView29"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/our_machine_learning_model_has_an_accuracy_greater_than_75_of_course_always_make_sure_to_consult_a_doctor_before_taking_a_new_potentially_harmful_medication"
                    android:textSize="16sp" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="10dp" />

                <TextView
                    android:id="@+id/textView30"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/for_any_other_questions_or_issues_reach_out_to_us_at"
                    android:textAlignment="center"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView31"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/aidruginteractionchecker_gmail_com"
                    android:textAlignment="center"
                    android:textSize="16sp" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="10dp" />
            </LinearLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>