<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPassword">

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:fontFamily="@font/archivo_black"
        android:text="@string/password_recovery"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/recoveryEmailEntry"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/recoveryEmailEntry"
        android:layout_width="357dp"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/email"
        android:autofillHints="emailAddress"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/recoveryBtn"
        android:layout_width="355dp"
        android:layout_height="51dp"
        android:layout_marginTop="25dp"
        android:text="@string/send_recovery_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recoveryEmailEntry" />

    <Button
        android:id="@+id/recoveryBackBtn"
        android:layout_width="wrap_content"
        android:layout_height="51dp"
        android:layout_marginTop="25dp"
        android:text="@string/back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recoveryBtn" />

</androidx.constraintlayout.widget.ConstraintLayout>